takenblok: init with real data

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -85,6 +85,7 @@
                                     </div>
                                 </div>
                             </div>
+                            {% include "melding/detail/taken.html" %}
                             {% include taken_template %}
                             {% include "melding/melding_detail_locaties_lichtmasten.html" with locaties=type_locaties melding=melding lichtmasten=locaties.lichtmasten only %}
                             <div class="grid-container grid-container--half">
