--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -1,5 +1,6 @@
 {% load to_datetime from date_tags %}
 {% load gebruikersnaam gebruikersinitialen get_gebruiker_object_middels_email from gebruikers_tags %}
+{% load humanize %}
 <section class="section--separated" data-testid="detailTaken">
     <div class="container__details">
         <h2>Taken</h2>
@@ -76,7 +77,7 @@
                                                             {{ taakgebeurtenis.taakstatus.naam|capfirst }}
                                                         {% endif %}
                                                     </p>
-                                                    <small>{{ taakgebeurtenis.aangemaakt_op|to_datetime|date:"d-m-Y, H:i" }}</small>
+                                                    <small>{{ taakgebeurtenis.aangemaakt_op|to_datetime|naturalday }} {{ taakgebeurtenis.aangemaakt_op|to_datetime|date:"H:i" }}</small>
                                                 </div>
                                             </li>
                                         {% endfor %}
