--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -75,6 +75,8 @@
         width: auto;
         background-color: transparent;
         padding-top: 15px;
+        transform: translateX(0);
+
         @media (min-width: map-get($grid-breakpoints, md)) {
             position: fixed;
             top: 0;
