--- a/app/apps/main/templates/melding/detail/taak_annuleren.html
+++ b/app/apps/main/templates/melding/detail/taak_annuleren.html
@@ -9,12 +9,13 @@
 <turbo-stream target="modal_body" action="update">
 <template>
     {% if form.taakopdracht %}
-        <form action="{% url 'taak_annuleren' melding.uuid %}"
+        <form action="{% if taakopdracht %}{% url 'taak_annuleren' melding.uuid taakopdracht.uuid %}{% else %}{% url 'taak_annuleren' melding.uuid %}{% endif %}"
               method="post"
               class="form--horizontal"
               data-turbo-frame="_top"
               enctype="multipart/form-data">
             {% csrf_token %}
+            {% if taakopdracht %}<h2>{{ taakopdracht.titel }}</h2>{% endif %}
             <div data-controller="select2Modal">{{ form.taakopdracht|render_rotterdam_formulier }}</div>
             <div class="form-control__with-helptext">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
             <div class="form-row btn-row">
