--- a/app/apps/main/templates/melding/detail/taken_aanmaken_stream.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_stream.html
@@ -1,5 +1,6 @@
 {% load context_template from context_tags %}
 {% context_template "melding_detail_acties.html" as acties_template %}
+{% include "melding/detail/taken.html" %}
 {% include "melding/detail/header_status.html" with melding=melding only %}
 {% include "melding/detail/taken_aanmaken_form.html" with form=form view=view only %}
 {% include "melding/detail/tijdlijn.html" with melding=melding only %}
