--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -39,6 +39,12 @@
                     }
                 }
 
+                small {
+                    font-size: 0.778rem;
+                    margin-bottom: 1em;
+                    display: block;
+                }
+
                 dt,
                 dd {
                     font-weight: 400;
