--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -41,7 +41,7 @@
 
                 small {
                     font-size: 0.778rem;
-                    margin-bottom: 1em;
+                    padding-bottom: 1em;
                     display: block;
                 }
 
