Moved actions to takenblok, styling

--- a/app/apps/context/templates/standaard/melding_detail_taken.html
+++ b/app/apps/context/templates/standaard/melding_detail_taken.html
@@ -1,3 +1,4 @@
+{% load mor_core_url from main_tags %}
 <section class="section--separated" data-testid="detailTaken">
     <div class="container__details">
         <h2>Taken</h2>
@@ -69,6 +70,32 @@
                     </div>
                     <div class="container__content">
                         <h3>Informatie uitvoerder</h3>
+                        <p>Ik heb nog een extra ronde gemaakt om ervoor te zorgen dat we niks vergeten zijn en we hebben alles rondom ook meegenomen.</p>
+                        <div class="container__thumbs">
+                            <ul>
+                                <li>
+                                    <div class="container__image">
+                                        <div class="image"
+                                                style="background-image:url('/core/media/afbeeldingen/2025/01/22/72e7c5a1-283a-4699-bbb9-b060593cb4b6_128x128.jpg')">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="container__image">
+                                        <div class="image"
+                                                style="background-image:url('/core/media/afbeeldingen/2025/01/22/72e7c5a1-283a-4699-bbb9-b060593cb4b6_128x128.jpg')">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="container__image">
+                                        <div class="image"
+                                                style="background-image:url('/core/media/afbeeldingen/2025/01/22/72e7c5a1-283a-4699-bbb9-b060593cb4b6_128x128.jpg')">
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </details>
