--- a/app/apps/main/templates/melding/detail/taken.html
+++ b/app/apps/main/templates/melding/detail/taken.html
@@ -48,23 +48,35 @@
                                     {{ taak.status.naam|capfirst }}
                                 {% endif %}
                             </div>
-                            <div>opties</div>
+                            <div>
+                                {% if not taak.afgesloten_op and not taak.verwijderd_op %}
+                                <div class="container__uitklapper">
+                                    <span>...</span>
+                                    <div class="legenda">
+                                        {% if perms.authorisatie.taak_afronden %}
+                                            <button type="button"
+                                                    class="btn btn-icon"
+                                                    data-action="modal#openModal"
+                                                    data-modal-action-param="{% url 'taak_afronden' melding.uuid taak.uuid %}">
+                                                {% include "icons/checkmark-square.svg" %}
+                                                Taak afronden
+                                            </button>
+                                        {% endif %}
+                                        {% if perms.authorisatie.taak_annuleren %}
+                                            <button type="button"
+                                                    class="btn btn-icon"
+                                                    data-action="modal#openModal"
+                                                    data-modal-action-param="{% url 'taak_annuleren' melding.uuid taak.uuid %}">
+                                                {% include "icons/bin.svg" %}
+                                                Taak annuleren
+                                            </button>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                                {% endif %}
+                            </div>
                         </summary>
                         <div class="container__taak--content">
-                            {% if not taak.afgesloten_op and not taak.verwijderd_op %}
-                                <button type="button"
-                                        class="btn btn-icon btn-textlink"
-                                        data-action="modal#openModal"
-                                        data-modal-action-param="{% url 'taak_afronden' melding.uuid taak.uuid %}">
-                                    Taak afronden
-                                </button>
-                                <button type="button"
-                                        class="btn btn-icon btn-textlink"
-                                        data-action="modal#openModal"
-                                        data-modal-action-param="{% url 'taak_annuleren' melding.uuid taak.uuid %}">
-                                    Taak annuleren
-                                </button>
-                            {% endif %}
                             <div class="container__content">
                                 <h3>Opmerking midoffice</h3>
                                 <div class="content">
@@ -126,15 +138,19 @@
                                         {% endif %}
                                     </p>
                                     {% if laatste_taakgebeurtenis.bijlagen %}
-                                        <ul>
-                                            {% for bijlage in laatste_taakgebeurtenis.bijlagen %}
+                                        <div class="container__thumbs">
+                                            <ul>
+                                                {% for bijlage in laatste_taakgebeurtenis.bijlagen %}
                                                 <li>
-                                                    <img width="100"
-                                                            height="100"
-                                                            src="{{ bijlage.afbeelding_verkleind_relative_url|mor_core_url }}" />
+                                                    <div class="container__image">
+                                                        <div class="image"
+                                                            style="{{ bijlage.afbeelding_verkleind_relative_url|mor_core_url }}">
+                                                        </div>
+                                                    </div>
                                                 </li>
-                                            {% endfor %}
-                                        </ul>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
                                     {% else %}
                                         <p>Er zijn geen finish foto's mee gestuurd bij het afronden van de taak</p>
                                     {% endif %}
@@ -151,17 +167,25 @@
                 {% endwith %}
             {% endfor %}
             <div class="container__aanmaken">
-                <span class="help-text">Er zijn nog geen taken toegevoegd</span>
-                <button class="btn btn-tertiary btn-icon">
-                    <svg width="24"
-                            height="24"
-                            viewBox="0 0 32 32"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
-                    </svg>
-                    Taken toevoegen
-                </button>
+            {% if taken.alle_taken|length == 0 %}
+                <span class="help-text">Er zijn nog geen taken aangemaakt</span>
+                {% endif %}
+                {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+                    <button class="btn btn-tertiary btn-icon"
+                            data-action="modal#openModal"
+                            data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
+                            data-modal-css-class-param="modal-dialog--wide modal--multistep-form"
+                    >
+                        <svg width="24"
+                                height="24"
+                                viewBox="0 0 32 32"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
+                        </svg>
+                        Taken aanmaken
+                    </button>
+                {% endif %}
             </div>
         </div>
     </div>
