--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -5,39 +5,39 @@
 {% block target %}melding_detail_acties{% endblock target %}
 <!-- djlint:on -->
 {% block content %}
-    {% melding_taken melding as taak_info %}
-    <p>
-        {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
-            <button type="button"
-                    class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
-                    data-action="modal#openModal"
-                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
-                    data-modal-css-class-param="modal-dialog--wide modal--multistep-form">
-                <span>Taken aanmaken</span>
-            </button>
-        {% endif %}
-        {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
-            <button type="button"
-                    class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
-                    data-action="modal#openModal"
-                    data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
-                <span>Melding afhandelen</span>
-            </button>
-        {% endif %}
-        {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
-        {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
-            <button type="button"
-                    class="btn btn-tertiary"
-                    data-action="modal#openModal"
-                    data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
-                <span>Melding heropenen</span>
-            </button>
-        {% endif %}
-    </p>
-    <ul class="list-links">
-        {% if taak_info.open_taken %}
-            {% if perms.authorisatie.taak_afronden %}
-                <li>
+    <div class="wrapper--actions">
+        {% melding_taken melding as taak_info %}
+        <p>
+            {% if perms.authorisatie.taak_aanmaken and taakr_taaktypes_niet_ingebruik_met_afdelingen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
+                <button type="button"
+                        class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
+                        data-action="modal#openModal"
+                        data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
+                        data-modal-css-class-param="modal-dialog--wide modal--multistep-form">
+                    <span>Taken aanmaken</span>
+                </button>
+            {% endif %}
+            {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
+                <button type="button"
+                        class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
+                        data-action="modal#openModal"
+                        data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+                    <span>Melding afhandelen</span>
+                </button>
+            {% endif %}
+            {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
+            {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
+                <button type="button"
+                        class="btn btn-tertiary"
+                        data-action="modal#openModal"
+                        data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
+                    <span>Melding heropenen</span>
+                </button>
+            {% endif %}
+        </p>
+        <p>
+            {% if taak_info.open_taken %}
+                {% if perms.authorisatie.taak_afronden %}
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="modal#openModal"
@@ -51,10 +51,8 @@
                         </svg>
                         Taak afronden
                     </button>
-                </li>
-            {% endif %}
-            {% if perms.authorisatie.taak_annuleren %}
-                <li>
+                {% endif %}
+                {% if perms.authorisatie.taak_annuleren %}
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="modal#openModal"
@@ -68,12 +66,10 @@
                         </svg>
                         Taak annuleren
                     </button>
-                </li>
+                {% endif %}
             {% endif %}
-        {% endif %}
-        {% if not melding.afgesloten_op %}
-            {% if perms.authorisatie.melding_annuleren %}
-                <li>
+            {% if not melding.afgesloten_op %}
+                {% if perms.authorisatie.melding_annuleren %}
                     <button type="button"
                             class="btn btn-icon btn-textlink"
                             data-action="modal#openModal"
@@ -87,8 +83,8 @@
                         </svg>
                         Melding annuleren
                     </button>
-                </li>
+                {% endif %}
             {% endif %}
-        {% endif %}
-    </ul>
+        </p>
+    </div>
 {% endblock content %}
