--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -66,3 +66,34 @@
         margin-right: 240px;
     }
 }
+
+.tag {
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+    border-radius: 12px;
+    position: relative;
+    &--qualification {
+        padding: 0.37rem 0.6rem 0.37rem 1.35rem;
+        background-color: $blue-200;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            border-radius: 100%;
+            background-color: $blue-900;
+            top: 50%;
+            left: 9px;
+            transform: translateY(-50%);
+        }
+    }
+
+    &--voltooid {
+        background-color: $green-200;
+
+        &::before {
+            background-color: $green-900;
+        }
+    }
+}
