--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -216,4 +216,50 @@
             display: none;
         }
     }
+
+    .status--busy {
+        position: relative;
+        display: flex;
+        .spinner {
+            position: relative;
+            &::before {
+                content: "";
+                border: 4px solid $primary;
+                border-top: 4px solid rgba(0, 129, 31, 0.5);
+                border-radius: 50%;
+                width: 30px;
+                height: 30px;
+                animation: spinner 2s linear infinite;
+                left: calc(50% - 15px);
+                top: calc(50% - 15px);
+                display: block;
+                z-index: 2001;
+                box-sizing: border-box;
+            }
+        }
+
+        &:has(.spinner:hover) {
+            z-index: 910;
+            span {
+                width: auto;
+                height: auto;
+                opacity: 1;
+            }
+        }
+
+        span {
+            display: block;
+            padding: 0.5rem;
+            width: 0;
+            height: 0;
+            overflow: hidden;
+            opacity: 0;
+            position: absolute;
+            top: 102%;
+            left: -50%;
+            background-color: $white;
+            border: 1px solid $gray-200;
+            border-radius: 12px;
+        }
+    }
 }
