--- a/app/frontend/assets/styles/components/_block-taken.scss
+++ b/app/frontend/assets/styles/components/_block-taken.scss
@@ -29,6 +29,12 @@
         font-weight: 700;
         font-size: 0.778rem;
         padding: 0.75rem 1rem;
+
+        > div {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
 
     .container__taak {
